# AirdropsForEveryone

./: README.md
app/: package.json  webpack.config.js
app/src/: App.tsx
app/src/Helpers/: CalculateMerkleProof.ts  CalculateMerkleRoot.ts  FetchCsvContent.ts
app/src/Interfaces/: AirdropValue.ts
merkleproof/: Cargo.toml
merkleproof/src/: lib.rs
